# zoho-to-salesforce-migration-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
creator_migration_helper/: __init__.py  cli.py  diffing.py  mapping.py  schema.py  zoho.py
examples/: salesforce_objects.json  schema.development.json  schema.production.json
tests/: test_cli.py  test_diffing.py  test_mapping.py  test_schema.py  test_snapshot_command.py  test_zoho.py
